[tool.poetry]
name = "spelling-bee"
version = "0.1.0"
description = ""
authors = ["riffraffbacalso <rbacalso1024@gmail.com>"]

packages = [
    { include = "spelling_bee" },
    { include = "*.py", from = "spelling_bee" },
]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.7"
black = "^22.6.0"
webdriver-manager = { git = "https://github.com/SergeyPirogov/webdriver_manager", rev = "master" }
selenium = "^4.5.0"
httpx = { extras = ["http2"], version = "^0.23.0" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
spell = "spelling_bee.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
