[tool.poetry]
name = "bspell"
version = "0.1.0"
description = ""
authors = ["riffraffbacalso <rbacalso1024@gmail.com>"]

packages = [
    { include = "bspell" },
    { include = "*.py", from = "bspell" },
]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.6.0"
webdriver-manager = { git = "https://github.com/SergeyPirogov/webdriver_manager", rev = "master" }
selenium = "^4.5.0"
httpx = { extras = ["http2"], version = "^0.23.0" }
retry = "^0.9.2"
unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
bspell = "bspell.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
