[tool.poetry]
name = "bspell"
version = "0.1.0"
description = ""
authors = ["riffraffbacalso <rbacalso1024@gmail.com>"]

packages = [
    { include = "bspell" },
    { include = "*.py", from = "bspell" },
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = { extras = ["http2"], version = "^0.23.0" }
retry = "^0.9.2"
unidecode = "^1.3.6"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pytest-mock = "^3.10.0"
pytest-httpx = "^0.21.2"

[tool.poetry.scripts]
bspell = "bspell.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
